- Improve update_columns on subforms
- Support to override ActiveScaffold.remove so effects can be added on page elements deletion
- Add support for conversion methods in controller, so form_uis can define how to convert params to values
- Avoid sorting by contraint columns
- Cosmetic fixes and improvements
- Fix multipart persistent update form
- Support jquery 1.9 (jquery-rails 2.2.0 gem)

= 3.2.19 (not released yet)
- Avoid crashing when between is chosen and from or to is not filled

= 3.2.18
- Fix add existing record with record_select
- Disable link for polymorphic associations in 3.2.x, it doesn't work

= 3.2.17
- fix constraints for columns with multiple columns in search_sql
- remove unauthorized collection links
- copy parameters and html_options on cloning action link
- fix missing argument in datepicker conditions
- check authorization in model for plural associations nested links
- Allow to set action_group in nested.add_link
- fix current page when is inside outer window
- Support record select with polymorphic associations
- Fix column count in inline adapter for forms and views
- Add support for class prefix on human condition helpers

= 3.2.16
- Fix use of column.css_class in form when is a proc, it wasn't skipped when form was a columns group
- Fix constraints and colspan in self-referential associations
- Fix rendering parent row after creating or updating in a nested form (singular associations)
- Translate include_blank and prompt in form_ui :select
- Fix mark for nested scaffolds
- Fix STI creation
- Fix null search for numeric columns
- Fix recordselect inplace_edit with plural associations in ruby 1.9

= 3.2.15
- Prepare to unify field overrides and list_ui method signatures
- Add :optional to update.persistent
- Add missing triggering of as:element_updated in new subform rows
- Fix conditions for :select in field_search
- Fix datetime field search
- Fix authorization checking in member action links

= 3.2.14