@@ -4,6 +4,7 @@ module ActiveScaffold::Actions
       base.class_eval do
         prepend_before_filter :register_constraints_with_action_columns, :unless => :nested?
         after_filter :clear_flashes
+        after_filter :clear_storage
         rescue_from ActiveScaffold::RecordNotAllowed, ActiveScaffold::ActionNotAllowed, :with => :deny_access
       end
       base.helper_method :nested?
