@@ -43,7 +43,11 @@ module ActionView::Helpers #:nodoc:
         constraints = options[:constraints]
         conditions = options[:conditions]
         eid = Digest::MD5.hexdigest(params[:controller] + remote_controller.to_s + constraints.to_s + conditions.to_s)
-        session["as:#{eid}"] = {:constraints => constraints, :conditions => conditions, :list => {:label => args.first[:label]}}
+        eid_info = {}
+        eid_info[:constraints] = constraints if constraints
+        eid_info[:conditions] = conditions if conditions
+        eid_info[:list] = {:label => args.first[:label]} if args.first[:label]
+        session["as:#{eid}"] = eid_info
         options[:params] ||= {}
         options[:params].merge! :eid => eid, :embedded => true
 
